letter spacing issue in product title fixed

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1517,14 +1517,12 @@ h1.product-title {
 @media (min-width: 768px) {
     h1.product-title {
         font-size: 60px; 
-        letter-spacing:1.2px;
     }
 }
 
 @media (min-width: 1200px) {
     h1.product-title {
         font-size: 66px; 
-        letter-spacing:1.2px;
     }
 }
 
